--- a/style.css
+++ b/style.css
@@ -33,18 +33,21 @@ body {
     background-size:cover
     */
 
-     background: var(--bg-url) no-repeat top center/cover 
+     background: var(--bg-url) no-repeat top center/cover;
+     height: 100vh;
 }
 
 body * {
     font-family: "Inter", sans-serif;
     color: var(--text-color);
+
 }
     
 
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
@@ -92,11 +95,15 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    animation: slide-back 0.2s forwards;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--hilight-color);
 }
 
 #switch span {
@@ -172,4 +179,33 @@ footer {
     padding: 24px 0;
     text-align: center;
     font-size: 14px;
+}
+
+@media (min-widht: 700px) {
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
 }
